tc-server-demo/service-tcserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: tc-server-1
  namespace: tc-demo
spec:
  selector:
    app: tc-server-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
