tc-server-demo/ingress-tcserver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tc-server-1-ingress
  namespace: tc-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: tc-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tc-server-1
                port:
                  number: 80
